Deals-> when multiple stages are added the UI truncates the name - Fixed

--- a/src/App.css
+++ b/src/App.css
@@ -956,6 +956,9 @@ select.selectfield {
   padding: 0 12px;
   overflow: auto;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  height: calc(100% - 60px);
 }
 
 /* .pdstage-area::-webkit-scrollbar {width: 10px;}
@@ -1039,10 +1042,13 @@ select.selectfield {
 .pdstage-row {
   display: flex;
   height: auto;
+  overflow-x: auto;
+  flex-wrap: nowrap;
+  white-space: nowrap;
 }
 
 .pdstage-col {
-  min-width: 0;
+  min-width: 200px;
   display: flex;
   flex-direction: column;
   flex-basis: 100%;
@@ -1315,11 +1321,14 @@ select.selectfield {
 }
 
 .loadingmore {
-  position: sticky;
-  left: 0;
-  bottom: 66px;
-  width: 100%;
+  position: fixed;
+  left: 50%; bottom: 20px;
+  /* bottom: 66px; */
+  width: 160px;
   z-index: 1;
+}
+.loadingmore button.btn.btn-primary {
+    margin: 0 !important;
 }
 
 /* Start CSS Deal By Stage Popup */
